--- a/E-Commerce.UI.WEB/Views/Home/Login.cshtml
+++ b/E-Commerce.UI.WEB/Views/Home/Login.cshtml
@@ -3,34 +3,50 @@
     ViewBag.Title = "Login";
 }
 
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card login-container">
-                <div class="card-body">
-                    <h2 class="card-title text-center">Login</h2>
-                    <form method="post" action="/UserLogin">
-                        <div class="form-group">
-                            <label for="email">Email Address</label>
-                            @Html.TextBox("Email")
-                        </div>
-                        <div class="form-group">
-                            <label for="password">Password</label>
-                            @Html.Password("Password")
-                        </div>
-                        @{
-                            if (ViewBag.Error != null)
-                            {
-                                <div class="alert alert-danger" style="display: none;" id="error-message">
-                                    @ViewBag.Error
-                                </div>
-                            }
-                        }
+<!---------------user-profile-section---------------->
+<section class="user-profile footer-padding">
+    <div class="container">
+        <div class="user-profile-section">
+            <div class="dashboard-heading ">
+                <h5 class="dashboard-title">Change Password</h5>
+            </div>
+            <div class="user-dashboard">
+                <!-- nav-content -->
+                <div class="tab-content nav-content" id="v-pills-tabContent" style="flex: 1 0%;">
+                    <div class="tab-pane fade active show" id="v-pills-password" role="tabpanel" aria-labelledby="v-pills-password-tab" tabindex="0">
+                        <div class="row align-items-center">
+                            <div class="col-lg-6">
+                                <div class="form-section ">
+                                    <form method="post" action="/UserLogin">
+                                        <div class="currentpass form-item">
+                                            <label for="email" class="form-label">Email Address</label>
+                                            @Html.TextBox("Email", null, new { @class = "form-control" })
+                                        </div>
+                                        <div class="password form-item">
+                                            <label for="email" class="form-label">Email Address</label>
+                                            @Html.Password("Password", null, new { @class = "form-control" })
+                                        </div>
+                                        @{
+                                            if (ViewBag.Error != null)
+                                            {
+                                                <div class="alert alert-danger" style="display: none;" id="error-message">
+                                                    @ViewBag.Error
+                                                </div>
+                                            }
+                                        }
+                                        <button type="submit" class="shop-btn">Login</button>
 
-                        <button type="submit" class="btn btn-primary btn-block">Login</button>
-                    </form>
+                                    </form>
+                                    <div class="form-btn">
+                                        <a href="#" class="shop-btn cancel-btn">Cancel</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</section>
+<!--------------- user-profile-section-end --------------->
