--- a/E-Commerce.UI.WEB/Views/Order/CreateUserAddress.cshtml
+++ b/E-Commerce.UI.WEB/Views/Order/CreateUserAddress.cshtml
@@ -4,50 +4,73 @@
     ViewBag.Title = "CreateUserAddress";
 }
 
-<h2>CreateUserAddress</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
+
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>UserAddress</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-     
-        <div class="form-group">
-            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+
+    <div class="login-section account-section modal-main">
+        <div class="review-form">
+            <div class="review-content">
+                <h5 class="comment-title">Add Your Address</h5>
+                <div class="close-btn">
+                    <img src="./assets/images/homepage-one/close-btn.png"
+                         onclick="modalAction('.submit')" alt="close-btn">
+                </div>
+            </div>
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="review-form-name address-form">
+                <label for="Title" class="form-label">Title*</label>
                 @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.City, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger" })
+            <div class=" account-inner-form">
+                <div class="review-form-name">
+                    <label for="Country" class="form-label">Country*</label>
+                    @Html.EditorFor(model => model.Country, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Country, "", new { @class = "text-danger" })
+                </div>
+                <div class="review-form-name">
+                    <label for="City" class="form-label">City*</label>
+                    @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="review-form-name address-form">
+                <label for="useraddress" class="form-label">Address*</label>
                 @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
             </div>
-        </div>
+            <div class="review-form-name address-form">
+                <label for="useraddress" class="form-label">Addressn 2*</label>
+                @Html.EditorFor(model => model.Address2, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Address2, "", new { @class = "text-danger" })
+            </div>
 
+            <div class=" account-inner-form city-inner-form">
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+                <div class="review-form-name">
+                    <label for="usernumber" class="form-label">
+                        Postcode /
+                        ZIP*
+                    </label>
+                    @Html.TextBoxFor(model => model.PostalCode, new { type = "number", @class = "form-control"})
+                    @Html.ValidationMessageFor(model => model.PostalCode, "", new { @class = "text-danger" })
+                </div>
+                <div class="review-form-name">
+                    <label for="usernumber" class="form-label">BuildingNumber *</label>
+                    @Html.TextBoxFor(model => model.BuildingNumber, new { type = "number", @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.BuildingNumber, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="login-btn text-center">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
+    <!-- change this -->
 }
-
 <div>
     @Html.ActionLink("Back to List", "Checkout")
 </div>
